# movies-apart

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  COMMANDS_CHEATSHEET.md  README.md  SETUP.md
.devcontainer/: Dockerfile  devcontainer.json
build_scripts/: generate_coverage_report  run-clang-format.py
data/: imdb_small_100.tsv  pathfinder1_pairs.tsv  random_actor_pairs.tsv  ref_unweighted_paths.tsv  small_actor_pairs.tsv  unweighted_paths.tsv
src/: CMakeLists.txt  pathfinder.cpp
src/ActorGraph/: ActorGraph.cpp  ActorGraph.hpp  CMakeLists.txt
test/: CMakeLists.txt  test_ActorGraph.cpp
